Simple ship process
It was built a BPEL to the ship process
The BPEL receives three arguments as input,
use them to invoke the ship operation of the ship proxy partner link,
and replies a simple OK
The proxy services had their packages changed

--- a/PetalsMarket/su-BPEL-ShipperProcess-provide/.project
+++ b/PetalsMarket/su-BPEL-ShipperProcess-provide/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>su-SOAP-SupermarketProxyService-provide</name>
+	<name>su-BPEL-ShipperProcess-provide</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -10,8 +10,14 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>com.ebmwebsourcing.petals.extension.bpeldesigner.petalsBpelBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>com.ebmwebsourcing.petals.tools.eclipse.su.main.nature</nature>
+		<nature>com.ebmwebsourcing.petals.extension.bpeldesigner.petalsBpelNature</nature>
 	</natures>
 </projectDescription>
