--- a/PetalsMarket/su-BPEL-ShipperProcess-provide/pom.xml
+++ b/PetalsMarket/su-BPEL-ShipperProcess-provide/pom.xml
@@ -13,8 +13,8 @@
 	</parent>
 	 --> 
 	
-	<name>su-SOAP-SupermarketProxyService-provide</name>
-	<artifactId>su-SOAP-SupermarketProxyService-provide</artifactId>
+	<name>su-BPEL-ShipperProcess-provide</name>
+	<artifactId>su-BPEL-ShipperProcess-provide</artifactId>
 	<groupId>org.ow2.petals</groupId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jbi-service-unit</packaging>
@@ -23,8 +23,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.ow2.petals</groupId>
-			<artifactId>petals-bc-soap</artifactId>
-			<version>4.0</version>
+			<artifactId>petals-se-bpel</artifactId>
+			<version>1.0</version>
 			<scope>provided</scope>
 			<type>jbi-component</type>
 		</dependency>
