--- a/DynamicMarket/log.config
+++ b/DynamicMarket/log.config
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, A1
+log4j.rootLogger=INFO, A1
 log4j.appender.A1=org.apache.log4j.FileAppender
 log4j.appender.A1.file=log.txt
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
