--- a/DynamicMarket/pom.xml
+++ b/DynamicMarket/pom.xml
@@ -33,4 +33,43 @@
     </dependency>
   </dependencies>
 
+<build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-shade-plugin</artifactId>
+			<version>1.5</version>
+			<configuration>
+			  <!-- put your configurations here -->
+				<filters>
+				<filter>
+				<artifact>*</artifact>
+				<excludes>
+				<exclude>META-INF/*.SF</exclude>
+				<exclude>META-INF/*.RSA</exclude>
+				<exclude>META-INF/*.INF</exclude>
+				</excludes>
+				</filter>
+				</filters>
+
+			</configuration>
+			<executions>
+			  <execution>
+			    <phase>package</phase>
+			    <goals>
+			      <goal>shade</goal>
+			    </goals>
+			    <configuration>
+			      <transformers>
+				<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+				  <mainClass>usp.baile.dynamic.util.Launch</mainClass>
+				</transformer>
+			      </transformers>
+			    </configuration>
+			  </execution>
+			</executions>
+      		</plugin>
+	</plugins>
+</build>
+
 </project>
